--- a/UniVerse/app/src/main/res/layout/fragment_feed.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_feed.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FeedFragment">
 
-    <TextView
-        android:id="@+id/feedFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Feed"
-        android:textColor="#43a047"
-        android:textSize="40sp"
-        android:textStyle="italic|bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/feedFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Home Feed"
+            android:textColor="#43a047"
+            android:textSize="40sp"
+            android:textStyle="italic|bold" />
+
+            <TextView
+                android:id="@+id/example"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="This is an example"
+                android:textColor="#43a047"
+                android:textSize="40sp"
+                android:textStyle="italic|bold"
+                android:layout_marginTop="1000dp"
+                android:layout_marginBottom="100dp"/>
+        </LinearLayout>
+
+    </ScrollView>
+
+
+</LinearLayout>
