--- a/UniVerse/app/src/main/res/layout/fragment_feed.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_feed.xml
@@ -1,46 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FeedFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FeedFragment">
+    android:layout_height="match_parent">
 
-
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:id="@+id/recycleView">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    </androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
-            android:id="@+id/feedFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Home Feed"
-            android:textColor="#43a047"
-            android:textSize="40sp"
-            android:textStyle="italic|bold" />
-
-            <TextView
-                android:id="@+id/example"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="This is an example"
-                android:textColor="#43a047"
-                android:textSize="40sp"
-                android:textStyle="italic|bold"
-                android:layout_marginTop="1000dp"
-                android:layout_marginBottom="100dp"/>
-        </LinearLayout>
-
-    </ScrollView>
-
-
-</LinearLayout>
+</RelativeLayout>
