--- a/UniVerse/app/src/main/res/layout/fragment_schedule.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_schedule.xml
@@ -6,37 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".ScheduleFragment">
 
-    <RadioGroup
-        android:id="@+id/listToggle"
+    <TextView
+        android:id="@+id/schedule_title"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:checkedButton="@id/calendarButton"
-        >
+        android:layout_height="50dp"
+        android:text="Your Schedule"
+        android:layout_margin="20dp"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <RadioButton
-            android:id="@+id/calendarButton"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="60dp"
-            android:text="Calendar"
-            />
+    <TextView
+        android:id="@+id/upcomingEvents"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Upcoming Events"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:textStyle=""
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/schedule_title"/>
 
-        <RadioButton
-            android:id="@+id/listButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="60dp"
-            android:text="List"/>
+    <TextView
+        android:id="@+id/todaysDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DATE"
+        android:layout_marginHorizontal="20dp"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textStyle=""
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/upcomingEvents"/>
 
-    </RadioGroup>
-
-    <CalendarView
-        app:layout_constraintTop_toBottomOf="@+id/listToggle"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@color/browser_actions_bg_grey"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/todaysDate"
+        app:layout_constraintVertical_bias="0.117"
+        tools:layout_editor_absoluteX="20dp">
+
+
+    </ListView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
