--- a/UniVerse/app/src/main/res/layout/create_event.xml
+++ b/UniVerse/app/src/main/res/layout/create_event.xml
@@ -6,16 +6,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context=".CreateEvent">
+
+        <!--    Event Name-->
 
         <TextView
             android:id="@+id/big_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
+            android:layout_marginStart="35sp"
             android:layout_marginTop="20sp"
             android:text="✨ CREATE NEW EVENT ✨"
             android:textColor="@android:color/holo_blue_light"
@@ -27,13 +29,12 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
 
-        <!--    Event Name-->
         <TextView
-            android:id="@+id/event_name"
+            android:id="@+id/eventNameTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/big_header"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="10sp"
             android:text="Event Name"
             android:textSize="20sp"
@@ -44,22 +45,22 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:id="@+id/eventNameBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/event_name"
-            android:layout_marginLeft="20sp"
+            android:layout_below="@+id/eventNameTitle"
+            android:layout_marginStart="20sp"
             android:hint="Enter event name"
             android:maxLines="1"
             android:minLines="1" />
 
         <!--Location-->
         <TextView
-            android:id="@+id/location"
+            android:id="@+id/locationTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/event_name"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="50sp"
+            android:layout_below="@+id/eventNameBox"
+            android:layout_marginStart="20sp"
             android:text="Location"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -69,10 +70,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:id="@+id/locationBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/location"
-            android:layout_marginLeft="20sp"
+            android:layout_below="@+id/locationTitle"
+            android:layout_marginStart="20sp"
             android:hint="Enter event location"
             android:maxLines="1"
             android:minLines="1" />
@@ -82,9 +84,9 @@
             android:id="@+id/is_public"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/location"
+            android:layout_below="@+id/locationBox"
             android:layout_marginLeft="20sp"
-            android:layout_marginTop="50sp"
+            android:layout_marginTop="10sp"
             android:text="Public"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -97,8 +99,8 @@
             android:id="@+id/switchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/location"
-            android:layout_marginTop="50sp"
+            android:layout_below="@+id/locationBox"
+            android:layout_marginTop="10sp"
             android:layout_toRightOf="@+id/is_public" />
 
         <!--Date and Time-->
@@ -107,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/is_public"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="10sp"
             android:text="Date and Time"
             android:textSize="20sp"
@@ -123,7 +125,7 @@
             android:layout_width="160sp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/date_time"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:onClick="openDatePicker"
             android:text="mm-dd-yyyy"
             android:textColor="@color/black"
@@ -135,7 +137,7 @@
             android:layout_width="130sp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/date_time"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_toRightOf="@+id/date_time"
             android:onClick="openTimePicker"
             android:text="hour-min"
@@ -148,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/date_time"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="50sp"
             android:text="Organizer Name"
             android:textSize="20sp"
@@ -174,7 +176,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/organizer"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="50sp"
             android:text="Summary"
             android:textSize="20sp"
@@ -189,7 +191,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/summary"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:hint="Enter a short description"
             android:maxLines="1"
             android:minLines="1" />
@@ -215,7 +217,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/description"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:hint="Enter a detailed description"
             android:maxLines="5"
             android:minLines="5" />
@@ -226,7 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/description"
-            android:layout_marginLeft="20sp"
+            android:layout_marginStart="20sp"
             android:layout_marginTop="130sp"
             android:text="How many students can join the event?"
             android:textSize="20sp"
@@ -247,28 +249,42 @@
             android:maxLines="1"
             android:minLines="1" />
 
-        <!--    Cancel Button-->
+        <TextView
+            android:id="@+id/eventPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/numStudentBox"
+            android:layout_marginStart="20sp"
+            android:layout_marginTop="10sp"
+            android:text="Event Photo"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <!--    Event Photo Button-->
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/eventPhotoPickerButton"
-            android:layout_width="350dp"
-            android:layout_height="160dp"
-            android:layout_below="@+id/num_student"
-            android:layout_marginVertical="70sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="27dp"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_below="@+id/eventPhoto"
+            android:layout_marginStart="20sp"
+            android:layout_marginTop="10sp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@drawable/event_photo"
             app:shapeAppearanceOverlay="@style/eventImageView" />
 
+        <!--    Cancel Button-->
         <Button
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/eventPhotoPickerButton"
             android:layout_marginHorizontal="80sp"
-            android:layout_marginTop="5sp"
+            android:layout_marginTop="10sp"
             android:backgroundTint="@android:color/holo_blue_light"
             android:text="Cancel"
             tools:layout_editor_absoluteX="158sp"
@@ -283,6 +299,7 @@
             android:layout_marginHorizontal="250sp"
             android:layout_marginTop="10dp"
             android:backgroundTint="@android:color/holo_blue_light"
+            android:onClick="errorWarning"
             android:text="Save"
             tools:layout_editor_absoluteX="158sp"
             tools:layout_editor_absoluteY="528sp" />
