--- a/UniVerse/app/src/main/res/layout/activity_forgot_password.xml
+++ b/UniVerse/app/src/main/res/layout/activity_forgot_password.xml
@@ -48,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="10dp"
         android:text="Enter your email and we'll send you a link to reset it."
         android:textSize="16sp"
         android:textColor="@color/black"
