--- a/UniVerse/app/src/main/res/drawable/camera_plus_circle.xml
+++ b/UniVerse/app/src/main/res/drawable/camera_plus_circle.xml
@@ -5,7 +5,7 @@
     <item>
         <shape android:shape="oval">
             <solid
-                android:color="@color/colorSecondary"/>
+                android:color="@color/accentColor200"/>
 
             <size
                 android:width="150dp"
