--- a/UniVerse/app/src/main/res/drawable/event_photo.xml
+++ b/UniVerse/app/src/main/res/drawable/event_photo.xml
@@ -4,7 +4,7 @@
     >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@android:color/darker_gray"/>
             <size
                 android:width="120dp"
                 android:height="120dp"/>
