--- a/UniVerse/app/src/main/res/layout/event_card.xml
+++ b/UniVerse/app/src/main/res/layout/event_card.xml
@@ -119,6 +119,12 @@
             android:text="INFO"
             android:fontFamily="@font/gilroy_bold"/>
 
+        <TextView
+            android:id="@+id/eventID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
